--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 <head>
     <title>Hello Web - Processing Test</title>
+    <link rel="stylesheet" href="style.css">
     <script src="p5.min.js"></script>
+    <script src="p5.dom.js"></script>
     <script src="bundle.js"></script>
     <script src="run.js"></script>
 </head>
 <body>
-    <h1>Processing Test</h1>
-    <p>This is my first Processing.js web-based sketch:</p>
+<h1>Processing Test</h1>
+<p>This is my first Processing.js web-based sketch:</p>
+<div id="sketch"></div>
 </body>
 </html>
 
